force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/BMCServiceDesk__SRM_RequestDetailInputs__c.object-meta.xml
<CustomObject>
    <description>Stores the input questions and the responses that a user has provided to fulfill the service request.</description>
    <label>Request Detail Inputs</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request Detail Input #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Detail Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>