force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/fields/BMCServiceDesk__FKFulfillmentInputs__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKFulfillmentInputs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Inputs</label>
    <referenceTo>BMCServiceDesk__SRM_FulfillmentInputs__c</referenceTo>
    <relationshipLabel>Request Detail Inputs</relationshipLabel>
    <relationshipName>Request_Detail_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>