force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/fields/BMCServiceDesk__FKRequestDetail__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKRequestDetail__c</fullName>
    <label>Request Detail</label>
    <referenceTo>BMCServiceDesk__SRM_RequestDetail__c</referenceTo>
    <relationshipLabel>Request Detail Inputs</relationshipLabel>
    <relationshipName>Request_Detail_Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>