force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/fields/BMCServiceDesk__History__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History</label>
    <type>Checkbox</type>
</CustomField>