force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/fields/BMCServiceDesk__Input__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Input__c</fullName>
    <label>Input / Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>