force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/fields/BMCServiceDesk__NewResponse__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NewResponse__c</fullName>
    <description>Stores the new input response when this record is edited</description>
    <label>NewResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>