force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/fields/BMCServiceDesk__Richtext_Response__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Richtext_Response__c</fullName>
    <description>Stores the content of Text Area (Rich) response type</description>
    <label>Richtext Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>