force-app/main/default/objects/BMCServiceDesk__SRM_RequestDetailInputs__c/fields/BMCServiceDesk__StoredValue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__StoredValue__c</fullName>
    <label>Stored Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>